--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular/router": "~3.0.0",
     "core-js": "^2.4.1",
+    "dom-autoscroller": "^1.4.1",
     "dragula": "^3.7.2",
     "flexibility": "^2.0.1",
     "ng2-dragula": "^1.2.1",
