--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~2.0.0",
     "@angular/platform-browser-dynamic": "~2.0.0",
     "@angular/router": "~3.0.0",
+    "angular-sortablejs": "^0.2.1",
     "core-js": "^2.4.1",
     "dom-autoscroller": "^1.4.1",
     "dragula": "^3.7.2",
